CS24: Implement PatchMeetup handler
